[package]
name = "bfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "1.6.0"
async-recursion = "1.0.4"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.3.2", features = ["cargo"] }
colored = "2.0.0"
futures = "0.3.28"
indicatif = "0.17.5"
tokio = { version = "1.28.2", features = ["time", "full"] }
